--- a/package.json
+++ b/package.json
@@ -7,19 +7,30 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "clientjs": "^0.2.1",
+    "crypto-js": "^4.2.0",
+    "expo-av": "^14.0.6",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-device-info": "^11.1.0",
+    "react-native-exit-app": "^2.0.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-permissions": "^4.1.5",
+    "react-native-reanimated": "^3.13.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-video": "^6.2.0",
+    "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-video": "^6.3.0",
+    "react-native-webview": "^13.10.5",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5"
@@ -37,6 +48,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
