--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-permissions": "^4.1.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.13.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-snap-carousel": "^3.9.1",
