--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "player",
+  "name": "maia_player",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "react-native-exit-app": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
+   
     "react-native-permissions": "^4.1.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.13.0",
